Backend/openshift/account/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: ai-sandbox
  labels:
    app: account-service
spec:
  selector:
    app: account-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
