Backend/openshift/account/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: account-service
  namespace: ai-sandbox
  labels:
    app: account-service
spec:
  to:
    kind: Service
    name: account-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
